@@ -7,6 +7,7 @@
 - Use updated note when reordering meta.
 - Define =vino-entry-meta-props-order= as =var= and not a =const=.
 - Fix average score calculation using =amean= strategy.
+- Use =vulpea-select-multiple-from= when selecting grapes to avoid repetition.
 
 ** v0.4.0
 
